--- a/DockerTest.Web/Views/Home/Index.cshtml
+++ b/DockerTest.Web/Views/Home/Index.cshtml
@@ -8,6 +8,6 @@
     <div class="col-md-12">
         <h2>Dock of the Bay<br/>
         on Docker</h2>
-        <iframe width="1120" height="630" src="https://www.youtube.com/embed/Es3Vsfzdr14?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe class="youtube-video" width="1120" height="630" src="https://www.youtube.com/embed/Es3Vsfzdr14?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </div>
